2006-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amrestore.c: reset count_error to 0 on a restore.

2006-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Change expression to remove overflow.

2006-03-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Don't use declaration after instruction,
	  older compiler don't accept it.

2006-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.0 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.0).
	* NEWS: Update for 2.5.0

2006-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: wait for compress/index/encryp subprocess.

2006-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Parse PARTIAL reply.

2006-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Put '#define HOLD_DEBUG' in comment.

2006-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Don't loop on startup_chunker.
	* server-src/dumper.c: Don't wait for all children, some process (ssh)
	  might not terminate.

2006-03-17  Ian Turner <ian@zmanda.com>
	* server-src/taper.c (read_file): When finished flushing a 
	  chunked dump, print information about the whole dump, not just 
	  the last chunk. Also, fix some memory leaks.

2006-03-16  Kevin Till <ktill@zmanda.com>
	* server-src/amverify.sh.in: check for EOI. amrestore only 
	  reports EOI for some tapetypes.

2006-03-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Fix heritage of auth.

2006-03-14  Kevin Till <ktill@@zmanda.com>
	* example/amanda.conf.in: add dumptype custom-compress. 
	  add ssh,krb5 as valid input for auth. 
        * man/xml-source/amanda.conf.5.xml: give reference to 
	  custom-compress, encrypt-fast dumptypes.

2006-03-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: Rename fe_amidxtaped_FEEDME to
					  fe_amrecover_FEEDME