@@ -25,7 +25,7 @@
  */
 
 /*
- * $Id: ssh-security.c,v 1.8 2006/02/17 00:58:51 ktill Exp $
+ * $Id: ssh-security.c,v 1.8.2.1 2006/04/11 11:11:16 martinea Exp $
  *
  * ssh-security.c - security and transport over ssh or a ssh-like command.
  *
@@ -935,7 +935,7 @@ conn_read_callback(cookie)
     sshprintf(("%s: ssh: conn_read_callback\n",debug_prefix_time(NULL)));
 
     /* Read the data off the wire.  If we get errors, shut down. */
-    rval = recv_token(rc, 5);
+    rval = recv_token(rc, 60);
     sshprintf(("%s: ssh: conn_read_callback: recv_token returned %d\n", debug_prefix_time(NULL), rval));
     if (rval <= 0) {
 	rc->pktlen = 0;
